--- a/internal/assets/manifests/istio-discovery/values.yaml
+++ b/internal/assets/manifests/istio-discovery/values.yaml
@@ -220,6 +220,11 @@ global:
   distribution: official
   # Used to locate istiod.
   istioNamespace: istio-system
+  # List of cert-signers to allow "approve" action in the istio cluster role
+  #
+  # certSigners:
+  #   - clusterissuers.cert-manager.io/istio-ca
+  certSigners: []
   # enable pod disruption budget for the control plane, which is used to
   # ensure Istio control plane components are gradually upgraded or recovered.
   defaultPodDisruptionBudget:
@@ -244,7 +249,7 @@ global:
   # Dev builds from prow are on gcr.io
   hub: istio
   # Default tag for Istio images.
-  tag: "1.16.1"
+  tag: "1.17.1"
   # Variant of the image to use.
   # Currently supported are: [debug, distroless]
   variant: ""
@@ -533,6 +538,12 @@ global:
 base:
   # For istioctl usage to disable istio config crds in base
   enableIstioConfigCRDs: true
+  # If enabled, gateway-api types will be validated using the standard upstream validation logic.
+  # This is an alternative to deploying the standalone validation server the project provides.
+  # This is disabled by default, as the cluster may already have a validation server; while technically
+  # it works to have multiple redundant validations, this adds complexity and operational risks.
+  # Users should consider enabling this if they want full gateway-api validation but don't have other validation servers.
+  validateGateway: false
 
 istio_cni:
   enabled: false
