--- a/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
@@ -13,7 +13,7 @@ data:
   mesh: |-
     connectTimeout: 5s
     defaultConfig:
-      discoveryAddress: istiod-cp-v116x.istio-system.svc:15012
+      discoveryAddress: istiod-cp-v117x.istio-system.svc:15012
       meshId: mesh1
       tracing:
         zipkin:
@@ -26,9 +26,9 @@ kind: ConfigMap
 metadata:
   labels:
     istio: meshconfig
-    istio.io/rev: cp-v116x.istio-system
+    istio.io/rev: cp-v117x.istio-system
     release: istio-operator-discovery
-  name: istio-cp-v116x.istio-system
+  name: istio-cp-v117x.istio-system
   namespace: istio-system
 
 ---
@@ -343,6 +343,10 @@ data:
               value: "{{ $containers | join "," }}"
             - name: ISTIO_META_CLUSTER_ID
               value: "{{ valueOrDefault .Values.global.multiCluster.clusterName `Kubernetes` }}"
+            - name: ISTIO_META_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
             - name: ISTIO_META_INTERCEPTION_MODE
               value: "{{ or (index .ObjectMeta.Annotations `sidecar.istio.io/interceptionMode`) .ProxyConfig.InterceptionMode.String }}"
             {{- if .Values.global.network }}
@@ -680,6 +684,10 @@ data:
               value: "{{ $containers | join "," }}"
             - name: ISTIO_META_CLUSTER_ID
               value: "{{ valueOrDefault .Values.global.multiCluster.clusterName `Kubernetes` }}"
+            - name: ISTIO_META_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
             - name: ISTIO_META_INTERCEPTION_MODE
               value: "{{ .ProxyConfig.InterceptionMode.String }}"
             {{- if .Values.global.network }}
@@ -1019,6 +1027,10 @@ data:
               value: "{{ $containers | join "," }}"
             - name: ISTIO_META_CLUSTER_ID
               value: "{{ valueOrDefault .Values.global.multiCluster.clusterName `Kubernetes` }}"
+            - name: ISTIO_META_NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
             {{- if .Values.global.network }}
             - name: ISTIO_META_NETWORK
               value: "{{ .Values.global.network }}"
@@ -1235,6 +1247,7 @@ data:
       "global": {
         "caAddress": "",
         "caName": "Citadel",
+        "certSigners": [],
         "configCluster": false,
         "configValidation": true,
         "defaultPodDisruptionBudget": {
@@ -1317,7 +1330,7 @@ data:
         "sts": {
           "servicePort": 0
         },
-        "tag": "1.16.1",
+        "tag": "1.17.1",
         "tracer": {
           "datadog": {
             "address": "$(HOST_IP):8126"
@@ -1343,7 +1356,7 @@ data:
         "chained": true,
         "enabled": false
       },
-      "revision": "cp-v116x",
+      "revision": "cp-v117x",
       "sidecarInjectorWebhook": {
         "alwaysInjectSelector": [],
         "defaultTemplates": [
@@ -1366,9 +1379,9 @@ kind: ConfigMap
 metadata:
   labels:
     istio: sidecar-injector
-    istio.io/rev: cp-v116x.istio-system
+    istio.io/rev: cp-v117x.istio-system
     release: istio-operator-discovery
-  name: istio-sidecar-injector-cp-v116x.istio-system
+  name: istio-sidecar-injector-cp-v117x.istio-system
   namespace: istio-system
 
 ---
@@ -1378,7 +1391,7 @@ metadata:
   labels:
     app: istio-reader
     release: istio-operator-discovery
-  name: istio-reader-cp-v116x
+  name: istio-reader-cp-v117x
   namespace: istio-system
 
 ---
@@ -1388,7 +1401,7 @@ metadata:
   labels:
     app: istio-reader
     release: istio-operator-discovery
-  name: istio-reader-cp-v116x-istio-system
+  name: istio-reader-cp-v117x-istio-system
 rules:
 - apiGroups:
   - config.istio.io
@@ -1484,14 +1497,14 @@ metadata:
   labels:
     app: istio-reader
     release: istio-operator-discovery
-  name: istio-reader-cp-v116x-istio-system
+  name: istio-reader-cp-v117x-istio-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: istio-reader-cp-v116x-istio-system
+  name: istio-reader-cp-v117x-istio-system
 subjects:
 - kind: ServiceAccount
-  name: istio-reader-cp-v116x
+  name: istio-reader-cp-v117x
   namespace: istio-system
 
 ---
@@ -1501,9 +1514,9 @@ metadata:
   labels:
     app: istiod
     istio: istiod
-    istio.io/rev: cp-v116x.istio-system
+    istio.io/rev: cp-v117x.istio-system
     release: istio-operator-discovery
-  name: istiod-cp-v116x
+  name: istiod-cp-v117x
   namespace: istio-system
 spec:
   clusterIP: None
@@ -1531,16 +1544,16 @@ kind: MutatingWebhookConfiguration
 metadata:
   labels:
     app: sidecar-injector
-    istio.io/rev: cp-v116x.istio-system
+    istio.io/rev: cp-v117x.istio-system
     release: istio-operator-discovery
-  name: istio-sidecar-injector-cp-v116x.istio-system
+  name: istio-sidecar-injector-cp-v117x.istio-system
 webhooks:
 - admissionReviewVersions:
   - v1beta1
   - v1
   clientConfig:
     service:
-      name: istio-sidecar-injector-cp-v116x
+      name: istio-sidecar-injector-cp-v117x
       namespace: istio-system
       path: /inject
       port: 443
@@ -1551,7 +1564,7 @@ webhooks:
     - key: istio.io/rev
       operator: In
       values:
-      - cp-v116x.istio-system
+      - cp-v117x.istio-system
     - key: istio-injection
       operator: DoesNotExist
   objectSelector:
@@ -1576,7 +1589,7 @@ webhooks:
   - v1
   clientConfig:
     service:
-      name: istio-sidecar-injector-cp-v116x
+      name: istio-sidecar-injector-cp-v117x
       namespace: istio-system
       path: /inject
       port: 443
@@ -1597,7 +1610,7 @@ webhooks:
     - key: istio.io/rev
       operator: In
       values:
-      - cp-v116x.istio-system
+      - cp-v117x.istio-system
   rules:
   - apiGroups:
     - ""
