Add istio.io/rev label to istio-cni

--- a/internal/assets/manifests/istio-cni/templates/daemonset.yaml
+++ b/internal/assets/manifests/istio-cni/templates/daemonset.yaml
@@ -23,6 +23,7 @@ spec:
       labels:
         app: istio-cni-node
         release: {{ .Release.Name }}
+        istio.io/rev: {{ include "namespaced-revision" . }}
         sidecar.istio.io/inject: "false"
 {{- include "toYamlIf" (dict "value" .Values.cni.podMetadata.labels) | indent 8 }}
       annotations:
