--- a/internal/assets/manifests/istio-cni/templates/configmap-cni.yaml
+++ b/internal/assets/manifests/istio-cni/templates/configmap-cni.yaml
@@ -12,6 +12,7 @@ metadata:
     app: istio-cni
     release: {{ .Release.Name }}
     istio.io/rev: {{ include "namespaced-revision" . }}
+    {{if .Values.cni.ambient.enabled}} "ambient.istio.io/redirection: disabled"{{end}}
 data:
   # The CNI network configuration to add to the plugin chain on each node.  The special
   # values in this config will be automatically populated.
@@ -22,6 +23,7 @@ data:
           "type": "istio-cni",
           "log_level": {{ quote .Values.cni.logLevel }},
           "log_uds_address": "__LOG_UDS_ADDRESS__",
+          {{if .Values.cni.ambient.enabled}}"ambient_enabled": true,{{end}}
           "kubernetes": {
               "kubeconfig": "__KUBECONFIG_FILEPATH__",
               "cni_bin_dir": {{ .Values.cni.cniBinDir | default $defaultBinDir | quote }},
@@ -41,6 +43,7 @@ metadata:
     app: istio-cni
     release: {{ .Release.Name }}
     istio.io/rev: {{ include "namespaced-revision" . }}
+    {{if .Values.cni.ambient.enabled}} "ambient.istio.io/redirection: disabled"{{end}}
 data:
   config: |
         - name: {{ include "name-with-revision" ( dict "name" "istio-cni" "context" $) }}
