--- a/internal/assets/manifests/istio-cni/templates/clusterrole.yaml
+++ b/internal/assets/manifests/istio-cni/templates/clusterrole.yaml
@@ -14,6 +14,8 @@ rules:
   - nodes
   verbs:
   - get
+  - list
+  - watch
 ---
 {{- if .Values.cni.repair.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
