--- a/internal/assets/manifests/istio-discovery/templates/service.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: istiod # TODO {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
+  name: istiod # TODO tmp to test with upstream images {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: istiod
