--- a/internal/assets/manifests/istio-discovery/templates/service.yaml
+++ b/internal/assets/manifests/istio-discovery/templates/service.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: istiod
-  #name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
+  name: {{ include "name-with-revision" ( dict "name" "istiod" "context" $) }}
   namespace: {{ .Release.Namespace }}
   labels:
     app: istiod
