--- a/internal/assets/manifests/istio-cni/templates/configmap-cni.yaml
+++ b/internal/assets/manifests/istio-cni/templates/configmap-cni.yaml
@@ -22,7 +22,9 @@ data:
           "type": "istio-cni",
           "log_level": {{ quote .Values.cni.logLevel }},
           "log_uds_address": "__LOG_UDS_ADDRESS__",
-          {{if .Values.cni.ambient.enabled}}"ambient_enabled": true,{{end}}
+          {{if .Values.cni.ambient.enabled -}}
+          "ambient_enabled": true,
+          {{end -}}
           "kubernetes": {
               "kubeconfig": "__KUBECONFIG_FILEPATH__",
               "cni_bin_dir": {{ .Values.cni.cniBinDir | default $defaultBinDir | quote }},
