--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -2203,6 +2203,8 @@ webhooks:
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
+  annotations:
+    admissions.enforcer/disabled: "true"
   labels:
     app: sidecar-injector
     istio.io/rev: cp-v115x.istio-system
