--- a/internal/assets/manifests/istio-meshgateway/templates/autoscale.yaml
+++ b/internal/assets/manifests/istio-meshgateway/templates/autoscale.yaml
@@ -1,6 +1,6 @@
 {{ $gateway := .Values.deployment }}
 {{- if and $gateway.autoscaleEnabled $gateway.autoscaleMin $gateway.autoscaleMax }}
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ $gateway.name }}
