--- a/internal/assets/manifests/istio-sidecar-injector/templates/autoscale.yaml
+++ b/internal/assets/manifests/istio-sidecar-injector/templates/autoscale.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.deployment.autoscaleEnabled .Values.deployment.autoscaleMin .Values.deployment.autoscaleMax }}
-apiVersion: autoscaling/v2beta2
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "name-with-revision" ( dict "name" "istio-sidecar-injector" "context" $) }}
