--- a/internal/assets/manifests/resource-sync-rule/templates/istio-multi-cluster-secret-resource-sync-rule.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/istio-multi-cluster-secret-resource-sync-rule.yaml
@@ -23,6 +23,8 @@ spec:
       content:
       - key: type
         value: k8s.cisco.com/istio-reader-secret
+      namespaces:
+        - {{ .Release.Namespace }}
     mutations:
       labels:
         add:
