--- a/internal/assets/manifests/resource-sync-rule/templates/mesh-resource-sync-rule.yaml
+++ b/internal/assets/manifests/resource-sync-rule/templates/mesh-resource-sync-rule.yaml
@@ -21,5 +21,7 @@ spec:
     - objectKey:
         name: {{ .Values.meshID }}
         namespace: {{ .Release.Namespace }}
+      namespaces:
+        - {{ .Release.Namespace }}
       syncStatus: true
 {{- end }}
